crates/jsonschema-codegen/tests/ui/unknown_regex_engine.stderr
error: Unknown regex engine. Expected `fancy_regex` or `regex`
 --> tests/ui/unknown_regex_engine.rs:3:34
  |
3 |     pattern_options = { engine = bogus }
  |                                  ^^^^^
