crates/jsonschema-codegen/tests/ui/unknown_regex_engine.rs
#[jsonschema::validator(
    schema = "{}",
    pattern_options = { engine = bogus }
)]
struct Validator;

fn main() {}
